build: Upgrade dev dependencies
- Replace symplify/easy-coding-standard with php-cs-fixer 3.65
- Upgrade phpstan to 2.1 and phpstan-symfony to 2.0
- Upgrade phpunit to 12.0
- Upgrade rector to 2.0
- Update configuration files for new tool versions

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,5 +3,7 @@ includes:
 
 parameters:
     level: 7
+    paths:
+        - src
     ignoreErrors:
-        - '#^Access to an undefined property Symfony\\Component\\Validator\\Constraint\:\:\$message\.$#'
+        - identifier: missingType.generics
