--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,10 @@
     }
   },
   "require-dev": {
-    "phpstan/phpstan": "^1.8",
-    "phpstan/phpstan-symfony": "^1.2",
-    "symplify/easy-coding-standard": "^11.1",
-    "rector/rector": "^0.14.5",
-    "phpunit/phpunit": "^9.6"
+    "friendsofphp/php-cs-fixer": "^3.65",
+    "phpstan/phpstan": "^2.1",
+    "phpstan/phpstan-symfony": "^2.0",
+    "phpunit/phpunit": "^12.0",
+    "rector/rector": "^2.0"
   }
 }
