--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.6/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/12.0/phpunit.xsd"
          colors="true"
          failOnRisky="true"
          beStrictAboutChangesToGlobalState="true"
          beStrictAboutOutputDuringTests="true"
          failOnWarning="true"
-         convertDeprecationsToExceptions="true"
-         cacheResult="false"
+         cacheDirectory=".phpunit.cache"
 >
     <testsuites>
         <testsuite name="unit">
