ci: Update GitHub workflow for new stack
- Use main branch only (remove develop)
- Test on PHP 8.2, 8.3, and 8.4
- Update actions to v4
- Replace ECS with PHP-CS-Fixer
- Update security-checker to v5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,46 @@
-name: Cloudflare Turnstile code review
+name: CI
 
 on:
   push:
-    branches: [ "develop", "main" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "develop", "main" ]
+    branches: [ "main" ]
 
 jobs:
-  review:
+  tests:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+    strategy:
+      matrix:
+        php-version: ['8.2', '8.3', '8.4']
 
-    - name: Setup PHP, with composer and extensions
-      uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup PHP ${{ matrix.php-version }}
+      uses: shivammathur/setup-php@v2
       with:
+        php-version: ${{ matrix.php-version }}
         extensions: mbstring, xml, ctype, iconv, intl
 
     - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+        key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
-          ${{ runner.os }}-php-
+          ${{ runner.os }}-php-${{ matrix.php-version }}-
 
     - name: Install dependencies
       run: composer install --no-interaction --no-progress
 
     - name: Check for vulnerabilities
-      uses: symfonycorp/security-checker-action@v4
+      uses: symfonycorp/security-checker-action@v5
 
-    - name: Run Easy Coding Standard
-      run: vendor/bin/ecs check
+    - name: Run PHP-CS-Fixer
+      run: vendor/bin/php-cs-fixer fix --dry-run --diff
 
-    - name: Run phpstan
-      run: vendor/bin/phpstan analyse -c phpstan.neon src
+    - name: Run PHPStan
+      run: vendor/bin/phpstan analyse
 
     - name: Run tests
-      run: vendor/bin/phpunit --configuration=./tests/phpunit.xml.dist
+      run: vendor/bin/phpunit -c tests/phpunit.xml.dist
